--- a/Memoire.tex
+++ b/Memoire.tex
@@ -31,7 +31,7 @@
 }
 
 \usepackage[utf8]{inputenc}
-
+% 
 \usepackage[all]{xy}
 \usepackage{array}
 \usepackage{graphicx,color}
@@ -139,6 +139,8 @@
     % You can adjust the size of the logo here.
     \includegraphics[scale=.5]{logo.png}
 
+    
+
     \vspace*{\fill}
 
     \huge \MakeUppercase{Imaginaries in Pairs of Algebraically Closed Fields}
@@ -157,7 +159,9 @@
     \large Master Logique et Fondements de l'Informatique
 
     Septembre 2021
-
+    \vspace{15mm}
+    \\
+    \includegraphics[scale=.35]{enslogo.jpg}
     \vspace*{\fill}
     \vspace*{\fill}
 
